@@ -25,6 +25,8 @@
   *  - Removed unused line encoding data and control requests from the CDC Bootloader code, to save space
   *  - Renamed SERIAL_STREAM_ASSERT() macro to STDOUT_ASSERT()
   *  - The USB_Device_IsRemoteWakeupSent() and USB_Device_IsUSBSuspended() macros have been deleted, as they are now obsolete
+  *  - Rewrote the implementation of the SwapEndian_16() and SwapEndian_32() functions so that they compile down in most instances to
+  *    minimal loads and stores rather than complicated shifts
   *
   *  <b>Fixed:</b>
   *  - Fixed AVRISP project sending a LOAD EXTENDED ADDRESS command to 128KB AVRs after programming or reading from
